--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.google.android.gms:play-services-location:15.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+
+
+    implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+
+
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.afollestad.material-dialogs:core:2.0.3'
     implementation 'com.google.android.material:material:1.0.0-beta01'
